feat(页脚): 启用页脚HTML注入并更新相关配置
- 启用footerConfig中的HTML注入功能
- 添加腾讯云EdgeOne CDN服务声明到FooterConfig.html
- 更新about.md中的GitHub用户名和内容格式

--- a/src/config/FooterConfig.html
+++ b/src/config/FooterConfig.html
@@ -1,1 +1,1 @@
-这里是HTML注入示例，你可以在这个文件中添加自定义的HTML内容
+<div style="text-align: center;">本网站由<a href="https://www.tencentcloud.com/zh" target="_blank">腾讯云EdgeOne</a>提供CDN加速服务</div>
