refactor(导航栏): 重构导航栏配置结构并移除自定义链接
移除导航栏中的自定义链接部分，将关于页面相关链接整合到内容菜单中
调整赞助和番组计划页面的显示顺序，并优化代码结构

--- a/src/config/FooterConfig.html
+++ b/src/config/FooterConfig.html
@@ -1,1 +1,1 @@
-<div style="text-align: center;">本网站由<a href="https://www.tencentcloud.com/zh" target="_blank">腾讯云EdgeOne</a>提供CDN加速服务</div>
+<div style="text-align: center;">本网站由<a href="https://www.tencentcloud.com/zh" target="_blank" style="font-weight: bold; color: blue;">腾讯云EdgeOne</a>提供CDN加速服务</div>
