feat(widget): 添加Umami统计组件
添加Umami统计组件用于展示网站访问数据，包括总浏览量、访问数和游客数。组件通过API获取Umami统计数据并格式化显示，同时处理错误情况。在侧边栏配置中添加了该组件的默认配置，并在页脚添加了Umami统计脚本。

--- a/src/config/FooterConfig.html
+++ b/src/config/FooterConfig.html
@@ -1,1 +1,2 @@
 <div style="text-align: center;">本网站由<a href="https://www.tencentcloud.com/zh" target="_blank" style="font-weight: bold; color: blue;">腾讯云EdgeOne</a>提供CDN加速服务</div>
+<script defer src="https://cloud.umami.is/script.js" data-website-id="5b6a6fb8-235b-4c0a-bce6-fd419e4a020c"></script>
